Move game version constants from core to plugins

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -28,6 +28,10 @@
             <div class="layui-card">
                 <div class="layui-card-header">Change Logs</div>
                 <div class="layui-card-body">
+                    <div class="site-title">v 0.0.2 beta</div>
+                    <div class="site-text">
+                        <p>·Move game version constants from core to plugins.</p>
+                    </div>
                     <div class="site-title">v 0.0.1 beta</div>
                     <div class="site-text">
                         <p>·First public beta version</p>
